--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.31.0",
     "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "gsap": "^3.14.1",
     "leva": "^0.10.1",
     "lucide-react": "^0.544.0",
@@ -51,6 +52,7 @@
     "three": "^0.182.0",
     "tw-animate-css": "^1.3.6",
     "vite-plugin-glsl": "^1.5.5",
+    "vite-plugin-glslify": "^2.3.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.11"
   },
