--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@convex-dev/react-query": "0.0.0-alpha.11",
     "@gsap/react": "^2.1.2",
     "@lobehub/icons": "^2.45.0",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@t3-oss/env-core": "^0.13.8",
@@ -33,7 +34,9 @@
     "@tanstack/router-plugin": "^1.132.0",
     "@unpic/react": "^1.0.2",
     "ai": "^5.0.110",
+    "ai-elements": "^1.6.3",
     "better-auth": "1.3.34",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.0",
@@ -41,7 +44,7 @@
     "glslify": "^7.1.1",
     "gsap": "^3.14.1",
     "leva": "^0.10.1",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.562.0",
     "nitro": "latest",
     "nodemailer": "^7.0.11",
     "react": "^19.2.0",
