finished UI of text input

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gsap": "^3.14.1",
     "leva": "^0.10.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "nitro": "latest",
     "nodemailer": "^7.0.11",
     "react": "^19.2.0",
