--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^2.0.2",
+    "@ai-sdk/react": "^3.0.6",
     "@base-ui-components/react": "^1.0.0-rc.0",
     "@convex-dev/better-auth": "^0.9.11",
     "@convex-dev/react-query": "0.0.0-alpha.11",
@@ -33,7 +35,7 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@unpic/react": "^1.0.2",
-    "ai": "^5.0.110",
+    "ai": "^6.0.6",
     "ai-elements": "^1.6.3",
     "better-auth": "1.3.34",
     "browser-image-compression": "^2.0.2",
@@ -58,7 +60,7 @@
     "vite-plugin-glsl": "^1.5.5",
     "vite-plugin-glslify": "^2.3.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.11"
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
