--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
     "@convex-dev/react-query": "0.0.0-alpha.11",
     "@gsap/react": "^2.1.2",
     "@lobehub/icons": "^2.45.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@t3-oss/env-core": "^0.13.8",
@@ -35,28 +45,36 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@unpic/react": "^1.0.2",
-    "ai": "^6.0.6",
+    "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.33",
     "ai-elements": "^1.6.3",
     "better-auth": "1.3.34",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.31.0",
+    "embla-carousel-react": "^8.6.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
     "gsap": "^3.14.1",
     "leva": "^0.10.1",
     "lucide-react": "^0.562.0",
-    "motion": "^12.23.26",
+    "motion": "^12.26.2",
+    "nanoid": "^5.1.6",
     "nitro": "latest",
     "nodemailer": "^7.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
+    "shiki": "^3.21.0",
+    "streamdown": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "three": "^0.182.0",
+    "tokenlens": "^1.3.1",
     "tw-animate-css": "^1.3.6",
+    "use-stick-to-bottom": "^1.1.1",
     "vite-plugin-glsl": "^1.5.5",
     "vite-plugin-glslify": "^2.3.0",
     "vite-tsconfig-paths": "^5.1.4",
